--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-modal": "^1.7.7",
     "react-router": "3.0.0"
   },
   "devDependencies": {
