--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
       "import/no-unresolved": 0,
       "import/no-extraneous-dependencies": 0,
       "import/extensions": 0,
+      "arrow-body-style": [
+        2,
+        "always"
+      ],
+      "import/no-named-as-default": [
+        "off"
+      ],
       "no-underscore-dangle": [
         "error",
         {
@@ -49,10 +56,13 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "meteor-node-stubs": "~0.2.4",
+    "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-modal": "^1.7.7",
-    "react-router": "3.0.0"
+    "react-router": "3.0.0",
+    "simpl-schema": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
